# DOCENT

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 258fc3dd0647_add_institution_catalog_and_venue_link.py  55a5efd17c3a_add_former_teacher_relationship.py  800669c6b0b4_add_connections.py  9dcbd31f1793_add_host_fields_to_visits.py  a3c4d5e6f7a8_add_visit_links.py  a6b7c8d9e0f1_federation_v2.py  b3c4d5e6f7a8_add_visit_language.py  c4d5e6f7a8b9_add_user_languages_and_schools.py  cc13b602d637_initial_schema.py  d3e4f5a6b7c8_add_user_position.py  d97bf1596965_add_visit_status_and_start_time.py  e1a2b3c4d5e6_add_app_settings.py  e4f5a6b7c8d9_add_federation.py  f2b3c4d5e6f7_add_visit_tags.py  f5a6b7c8d9e0_add_federated_audience.py
backend/app/: config.py  database.py  deps.py  languages.py  main.py  models.py  ratelimit.py  scheduler.py  schemas.py  security.py
backend/app/routers/: admin.py  auth.py  connections.py  federation.py  geocode.py  map.py  public.py  (+5 more)
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_connections.py  test_dbtransfer.py  test_federation.py  test_ics.py  test_import_radius.py  test_links.py  test_map.py  test_overpass.py  test_photon.py  test_profile.py  test_public.py  test_ratelimit.py  test_reports.py  test_scheduling.py  test_stats.py  test_tags.py  test_visits.py
(+90 files in other folders)
