[project]
name = "docent-backend"
version = "0.1.0"
description = "DOCENT — Decentralized Outreach & Community Engagement Network Tracker (API)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2,<3",
    "psycopg[binary]>=3.1,<4",
    "alembic>=1.13,<2",
    "pydantic-settings>=2,<3",
    "pwdlib[argon2]>=0.2,<1",
    "email-validator>=2,<3",
    "pyjwt>=2.8,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
